Fixed / modified schedule appt. page so that image and info in divided and next to the schedule. Will continue and see if the info can be better aligned

--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,7 @@
 .vertical-divider
 {
     border-left: 2px solid black;
+    height: 100%;
     padding-left: 30px;
     padding-right: 30px;
 }
@@ -159,4 +160,13 @@ th
 {
     border: none;
     background-color: transparent;
+}
+
+.dog-image
+{
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
